脚本优化加入GC相关配置